--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -14,15 +14,17 @@ Before going into the details of the adsorption properties themselves, we will f
 
 \subsubsection{Pore size}
 
-There are a multitude of pore sizes depending on the point where we measure it, all these pore sizes  compose what we call a pore size distribution. Some specific values are, however, uniquely defined and used to put a single value to characterize pore sized. The pore limiting diameter (PLD) is the diameter of the largest sphere that can diffuse freely in the structure, it is also noted $D_f$. The diameter $D_{if}$ corresponds to the diameter of the largest included sphere along a free diffusion path also denoted LCD; the global cavity diameter (GCD) is the diameter of the largest included sphere (not necessarily in a free diffusion path) also denoted $D_i$. The Figure~\ref{fgr:pore_size} illustrates the difference between these pore sizes. In thermodynamic studies we will use the term LCD for the largest included sphere $D_i$, because we did not consider the effect of hard sphere blocking in adsorption processes (the model is way too simplistic) --- therefore, there is no distinction between $D_i$ and $D_{if}$ in characterizing adsorption simulations results. The term LCD will be used instead of GCD since the distinction is not relevant in our studies.
+There are a multitude of pore sizes depending on the point where we measure it, all these pore sizes  compose what we call a pore size distribution. Some specific values are, however, uniquely defined and used to put a single value to characterize pore sized. The diameter of the largest sphere that can diffuse freely in the structure is called $D_f$. The diameter $D_{if}$ corresponds to the diameter of the largest included sphere along a free diffusion path; the diameter of the largest included sphere (not necessarily in a free diffusion path) is denoted $D_i$. The Figure~\ref{fgr:pore_size} illustrates the difference between these pore sizes. In thermodynamic studies we will often use the term ``largest cavity diameter'' (LCD) will be used instead of the largest included sphere $D_i$. The term ``pore limiting diameter'' will be used instead of $D_i$ especially when studying the transport effects with the nanopores.
 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.7\textwidth]{figures/2-thermo/pores.pdf}
-  \caption{Illustration of the different pore sizes PLD, LCD and GCD. }\label{fgr:pore_size}
+  \caption{Illustration of the different pore sizes PLD, LCD and GCD. \todo{use Di etc instead}}\label{fgr:pore_size}
 \end{figure}
 
-To define these pore sizes, we need to first set the radii of the framework atoms that will shape the surrounding pores. These radii can be defined using different methods, the default mode uses the Cambridge database radii. We used a similar approach than the one developed by Hung et al.\ instead of the default definition.\cite{Hung_2021} All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k_\text{B} T/2$, for $T = \SI{298}{\kelvin}$. This type of definition can be more easily compared to the molecular simulations.
+To define these pore sizes, we need to first set the radii of the framework atoms that will shape the surrounding pores. These radii can be defined using different methods, the default mode uses the Cambridge Crystallographic Data Centre's (CCDC) radii. This method is most commonly used in the literature. We also introduced another set of radii based on the universal forcefield~\cite{rappe1992} we use for molecular simulations. The determination of these radii are inspired by an approach developed by Hung et al.\cite{Hung_2021} The atomic radii are defined as the distance where the LJ potential reaches $3 k_\text{B} T/2$, for $T = \SI{298}{\kelvin}$. This type of definition can be more easily compared to the molecular simulations. For instance, we will use indexes to tell apart both methods --- LCD\e{UFF} will   LCD\e{CCDC}
+\todo{define two types of LCD here}
+
 
 \subsubsection{Surface Area}
 
@@ -382,16 +384,16 @@ To go a little bit further in the correlation interpretation, the Figure~\ref{fg
 \begin{figure}
   \centering
   \includegraphics[width=0.6\textwidth]{figures/2-thermo/H_Xe_widom_vs_K_Xe_widom_overview.jpg}
-  \caption{Comparison between the Xe Henry constant and Xe adsorption enthalpy labeled by categories of LCD values for the CoRE MOF structures.}\label{fgr:henry_enthalpy}
+  \caption{Comparison between the Xe Henry constant and Xe adsorption enthalpy labeled by categories of LCD\e{UFF} values for the CoRE MOF structures.}\label{fgr:henry_enthalpy}
 \end{figure}
 
-To check this, we looked at the influence of the pore size and the void fraction on the entropic term $T\Delta\e{ads}S\ex{Xe}\e{0}$ (see Figure~\ref{fgr:entropy_geometry}). The entropy is clearly related to the pore size here represented by the LCD --- the larger the pore the higher the entropy is likely to be. This can simply be explained by the confinement effect of the pore --- a small pore gives very little possible adsorbable positions to the xenon, whereas a larger pore opens up the possible sites for the adsorption. The same trend can be observed for the pore volume represented by the void fraction here. A weak linear correlation exists between the void fraction (in log-scale) and the adsorption entropic term of xenon. We can however argue that the whole picture of the entropic behavior is not captured by these simple geometric descriptors, especially for the larger pore sizes; other effects also play a role such as the shape of the channel and cavities (e.g. tortuosity) or the whole picture of the pore size distribution that cannot be simply captured in the LCD.
+To check this, we looked at the influence of the pore size and the void fraction on the entropic term $T\Delta\e{ads}S\ex{Xe}\e{0}$ (see Figure~\ref{fgr:entropy_geometry}). The entropy is clearly related to the pore size here represented by the LCD\e{UFF} --- the larger the pore the higher the entropy is likely to be. This can simply be explained by the confinement effect of the pore --- a small pore gives very little possible adsorbable positions to the xenon, whereas a larger pore opens up the possible sites for the adsorption. The same trend can be observed for the pore volume represented by the void fraction here. A weak linear correlation exists between the void fraction (in log-scale) and the adsorption entropic term of xenon. We can however argue that the whole picture of the entropic behavior is not captured by these simple geometric descriptors, especially for the larger pore sizes; other effects also play a role such as the shape of the channel and cavities (e.g. tortuosity) or the whole picture of the pore size distribution that cannot be simply captured in the LCD\e{UFF}.
 
 \begin{figure}
   \centering
   \includegraphics[width=0.4\textwidth]{figures/2-thermo/Scatterplot_entropy_lcd.pdf}
   \includegraphics[width=0.4\textwidth]{figures/2-thermo/Scatterplot_entropy_vf.pdf}
-  \caption{Comparison plots of the entropic term $T\Delta\e{ads}S\ex{Xe}\e{0}$ at infinite dilution and two geometric descriptors: the LCD (left) and the void fraction (right).}\label{fgr:entropy_geometry}
+  \caption{Comparison plots of the entropic term $T\Delta\e{ads}S\ex{Xe}\e{0}$ at infinite dilution and two geometric descriptors: the LCD\e{UFF} (left) and the void fraction (right).}\label{fgr:entropy_geometry}
 \end{figure}
 
 If we now croos these results with the previous results obtained on the influence of geometric descrioptors in the section~\ref{sct:geometry}, we can note that the entropic effect goes in the same direction than the enthalpic term for explaining the selecitivity, when the pore size is around the size of a xenon. The confinement of the xenon makes the entropy lower in the adsorbed phase than in the gas phase, which is even more true for pores whose size are tailored for a xenon. The second benefit of this type of pore is the optimal interaction with the surrounding framework atoms, which lowers down the enthalpic term. Both effects are going in the same way and explain the optimal selectivity for this particular pore size value (around \SI{5}{\angstrom}). 
